--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,7 +1,10 @@
 {
   "name": "mobile",
+  "description": "Mercure POC",
   "version": "0.1.0",
-  "private": true,
+  "author": "info@inshop.com.ua",
+  "license": "MIT",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -21,16 +24,32 @@
     "cordova-serve-osx": "cross-env CORDOVA_PLATFORM=osx vue-cli-service cordova-serve-osx"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "@inshopgroup/vue-inshop-crm-form-components": "^1.0.21",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "core-js": "^2.6.9",
+    "eventsource": "^1.0.7",
+    "jwt-decode": "^2.2.0",
+    "pluralize": "^8.0.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.7",
+    "vue-toastr": "^2.1.1",
+    "vuex": "^3.1.1",
+    "xregexp": "^4.2.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-plugin-eslint": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
+    "@vue/cli-service": "^3.9.2",
+    "babel-eslint": "^10.0.2",
+    "daterangepicker": "^3.0.5",
+    "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.18.2",
+    "sass-loader": "^7.1.0",
     "vue-cli-plugin-cordova": "^2.3.6",
     "vue-template-compiler": "^2.6.10"
   },
@@ -40,12 +59,28 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+      "plugin:vue/recommended",
+      "eslint:recommended",
+      "prettier/vue",
+      "plugin:prettier/recommended"
     ],
-    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+    "rules": {
+      "semi": [
+        "error",
+        "never"
+      ],
+      "vue/script-indent": "error",
+      "prettier/prettier": [
+        "warn",
+        {
+          "singleQuote": true,
+          "semi": false,
+          "trailingComma": "none"
+        }
+      ]
     }
   },
   "postcss": {
