--- a/mobile/src-cordova/package.json
+++ b/mobile/src-cordova/package.json
@@ -1,15 +1,29 @@
 {
-    "name": "com.vue.example.app",
-    "displayName": "VueExampleAppName",
-    "version": "1.0.0",
-    "description": "A sample Apache Cordova application that responds to the deviceready event.",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "com.vue.example.app",
+  "displayName": "VueExampleAppName",
+  "version": "1.0.0",
+  "description": "A sample Apache Cordova application that responds to the deviceready event.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "ecosystem:cordova"
+  ],
+  "author": "Apache Cordova Team",
+  "license": "Apache-2.0",
+  "dependencies": {
+    "cordova-android": "^8.0.0"
+  },
+  "devDependencies": {
+    "cordova-plugin-whitelist": "^1.3.4"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {}
     },
-    "keywords": [
-        "ecosystem:cordova"
-    ],
-    "author": "Apache Cordova Team",
-    "license": "Apache-2.0"
+    "platforms": [
+      "android"
+    ]
+  }
 }
