--- a/api/.env.prod
+++ b/api/.env.prod
@@ -10,12 +10,13 @@ PORT_MERCURE=1337
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=!ChangeMe!
-TRUSTED_PROXIES=127.0.0.1,127.0.0.2
-TRUSTED_HOSTS=127.0.0.1,localhost,example.com
+#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
+#TRUSTED_HOSTS=127.0.0.1,localhost,example.com
 ###< symfony/framework-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+#CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+CORS_ALLOW_ORIGIN=.
 ###< nelmio/cors-bundle ###
 
 ###> doctrine/doctrine-bundle ###
