--- a/api/.env.prod
+++ b/api/.env.prod
@@ -8,7 +8,7 @@ PORT_ELASTIC=9222
 PORT_MERCURE=1337
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=!ChangeMe!
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=127.0.0.1,localhost,example.com
