--- a/client/docker-compose.prod.yml
+++ b/client/docker-compose.prod.yml
@@ -1,25 +1,19 @@
 version: '3.2'
 
 services:
-  node:
+  nginx:
     restart: always
-    image: "node:11"
-    user: "node"
-    working_dir: /var/www
+    image: registry.inshop.com.ua/amertalk/server/docker-admin-nginx-prod
     environment:
       VIRTUAL_HOST: clientdemo.yap.life
-      VIRTUAL_PORT: 3000
       LETSENCRYPT_HOST: clientdemo.yap.life
       LETSENCRYPT_EMAIL: info@inshop.com.ua
-      NODE_ENV: production
-      HOST: 0.0.0.0
     volumes:
-      - ./:/var/www
-    expose:
-      - 3000
-    command: "npm start"
+      - .:/var/www
     networks:
       - webproxy
+    env_file:
+      - ./.env
 
 networks:
   webproxy:
