--- a/mobile/src-cordova/package.json
+++ b/mobile/src-cordova/package.json
@@ -14,11 +14,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "cordova-android": "^8.0.0",
-    "cordova-ios": "^5.0.1"
-  },
-  "devDependencies": {
+    "cordova-ios": "^5.0.1",
     "cordova-plugin-whitelist": "^1.3.4"
   },
+  "devDependencies": {},
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {}
