--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.20",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "@inshopgroup/vue-inshop-crm-form-components": "^1.0.21",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
@@ -25,6 +28,7 @@
     "xregexp": "^4.2.4"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.0",
     "@vue/cli-plugin-babel": "^3.9.2",
     "@vue/cli-plugin-eslint": "^3.9.2",
     "@vue/cli-service": "^3.9.2",
